Add teaser & simple description

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "tailwindcss": "^2.0.2"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.15.1"
+        "@fortawesome/fontawesome-free": "^5.15.1",
+        "aos": "^2.3.4"
     }
 }
