--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,10 +1,15 @@
 # Canonical https/www
 <IfModule mod_rewrite.c>
+
+    RewriteCond %{HTTP_HOST} ^openoverlay\.app$ [NC]
+    RewriteRule ^(.*)$ https://www.openoverlay.dev [R=301,L]
+
 	RewriteCond %{HTTPS} off
 	RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
 	RewriteCond %{HTTP_HOST} !^www\. [NC]
 	RewriteRule (.*) https://www.%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
 </IfModule>
 
 <IfModule mod_rewrite.c>
@@ -27,4 +32,29 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+</IfModule>
+
+<IfModule mod_expires.c>
+    ExpiresActive On
+    ExpiresByType image/gif "access plus 14 days"
+    ExpiresByType image/ico "access plus 14 days"
+    ExpiresByType image/jpeg "access plus 14 days"
+    ExpiresByType image/jpg "access plus 14 days"
+    ExpiresByType image/png "access plus 14 days"
+    ExpiresByType image/svg "access plus 14 days"
+    ExpiresByType text/css "access plus 14 days"
+    ExpiresByType text/javascript "access plus 14 days"
+    ExpiresByType application/x-javascript "access plus 14 days"
+    ExpiresByType application/javascript "access plus 14 days"
+    ExpiresByType image/svg+xml "access plus 14 days"
+
+    ExpiresByType application/vnd.ms-fontobject "access plus 30 days"
+    ExpiresByType application/x-font-ttf "access plus 30 days"
+    ExpiresByType application/x-font-opentype "access plus 30 days"
+    ExpiresByType application/x-font-woff "access plus 30 days"
+</IfModule>
+
+# Enable gzip compression
+<IfModule mod_deflate.c>
+    AddOutputFilterByType DEFLATE text/html text/xml text/plain text/css text/javascript application/json
 </IfModule>
