--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.1",
-        "aos": "^2.3.4"
+        "aos": "^2.3.4",
+        "highlight.js": "^10.6.0",
+        "highlightjs-badge": "^0.1.9"
     }
 }
