Update css & js

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,19 +1,19 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/webfonts/fa-brands-400.eot": "/webfonts/fa-brands-400.eot",
-    "/webfonts/fa-brands-400.svg": "/webfonts/fa-brands-400.svg",
-    "/webfonts/fa-brands-400.ttf": "/webfonts/fa-brands-400.ttf",
-    "/webfonts/fa-brands-400.woff": "/webfonts/fa-brands-400.woff",
-    "/webfonts/fa-brands-400.woff2": "/webfonts/fa-brands-400.woff2",
-    "/webfonts/fa-regular-400.eot": "/webfonts/fa-regular-400.eot",
-    "/webfonts/fa-regular-400.svg": "/webfonts/fa-regular-400.svg",
-    "/webfonts/fa-regular-400.ttf": "/webfonts/fa-regular-400.ttf",
-    "/webfonts/fa-regular-400.woff": "/webfonts/fa-regular-400.woff",
-    "/webfonts/fa-regular-400.woff2": "/webfonts/fa-regular-400.woff2",
-    "/webfonts/fa-solid-900.eot": "/webfonts/fa-solid-900.eot",
-    "/webfonts/fa-solid-900.svg": "/webfonts/fa-solid-900.svg",
-    "/webfonts/fa-solid-900.ttf": "/webfonts/fa-solid-900.ttf",
-    "/webfonts/fa-solid-900.woff": "/webfonts/fa-solid-900.woff",
-    "/webfonts/fa-solid-900.woff2": "/webfonts/fa-solid-900.woff2"
+    "/js/app.js": "/js/app.js?id=84090246dba0a2ff6d49",
+    "/css/app.css": "/css/app.css?id=0d0ca5905f6819bfe4d1",
+    "/webfonts/fa-brands-400.eot": "/webfonts/fa-brands-400.eot?id=fb88e0eb1cf4fad58678",
+    "/webfonts/fa-brands-400.svg": "/webfonts/fa-brands-400.svg?id=2f12242375edd68e9013",
+    "/webfonts/fa-brands-400.ttf": "/webfonts/fa-brands-400.ttf?id=8c89df472c13f9c7dfd3",
+    "/webfonts/fa-brands-400.woff": "/webfonts/fa-brands-400.woff?id=c9224826ade0e37c34a4",
+    "/webfonts/fa-brands-400.woff2": "/webfonts/fa-brands-400.woff2?id=8cf3661623196c2e1fd5",
+    "/webfonts/fa-regular-400.eot": "/webfonts/fa-regular-400.eot?id=8fcaad1ddd9a50aef344",
+    "/webfonts/fa-regular-400.svg": "/webfonts/fa-regular-400.svg?id=3602b7e8b2cb1462b0be",
+    "/webfonts/fa-regular-400.ttf": "/webfonts/fa-regular-400.ttf?id=7167c404330c60a35fe8",
+    "/webfonts/fa-regular-400.woff": "/webfonts/fa-regular-400.woff?id=9b4e1e88ee8e0195e5f1",
+    "/webfonts/fa-regular-400.woff2": "/webfonts/fa-regular-400.woff2?id=71e7839eccd818adf53b",
+    "/webfonts/fa-solid-900.eot": "/webfonts/fa-solid-900.eot?id=01dc0641add6a7f90fd6",
+    "/webfonts/fa-solid-900.svg": "/webfonts/fa-solid-900.svg?id=664de3932dd6291b4b8a",
+    "/webfonts/fa-solid-900.ttf": "/webfonts/fa-solid-900.ttf?id=20efa37a01e77a3568b3",
+    "/webfonts/fa-solid-900.woff": "/webfonts/fa-solid-900.woff?id=87cb6f5648d156c4df9d",
+    "/webfonts/fa-solid-900.woff2": "/webfonts/fa-solid-900.woff2?id=b531ec6d13e6eaacaed2"
 }
